# deepcoach

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
configs/: clip_template.yaml  usa_paraguay.yaml
src/deepcoach/: __init__.py  cli.py
src/deepcoach/contracts/: __init__.py  common.py  detections.py  ingest.py  metrics.py  pitch.py  tracks.py
src/deepcoach/io/: __init__.py  artifacts.py  clip.py  config.py
src/deepcoach/quality/: __init__.py  report.py
src/deepcoach/render/: __init__.py  heatmap.py  overlay.py  pitchcontrol.py  radar.py
src/deepcoach/stages/: __init__.py  s0_ingest.py  s1_detect.py  s2_teams.py  s3_track.py  s4_homography.py  s5_project.py  s6_metrics.py
tests/: test_config.py  test_contracts_roundtrip.py  test_geometry.py  test_ingest.py  test_metrics.py  test_pipeline_geometry.py  test_spatial_metrics.py
